# cadastre-pg

./: .gitignore  Cargo.toml  LICENSE  README.md  db.js  edigeo-config.json  getDep.js  index.js  main.js  package.json  prepareData.js  toGeojson.js
.github/workflows/: release.yml
cadastre-pg/: Cargo.toml
cadastre-pg/benches/: import.rs
cadastre-pg/src/: cli.rs  lib.rs  main.rs  report.rs
cadastre-pg/src/config/: mod.rs
cadastre-pg/src/config/presets/: bati.json  full.json  light.json
cadastre-pg/src/export/: geojson.rs  mod.rs  pool.rs  postgres.rs  reproject.rs  transaction.rs
cadastre-pg/src/reproject_lite/: ellipsoid.rs  lambert.rs  mercator.rs  mod.rs  smart.rs  utm.rs
cadastre-pg/src/versioning/: diff.rs  mod.rs  temporal.rs  upsert.rs
cadastre-pg/tests/: postgres_integration.rs
config/: bati.json  full.json  light.json
dep/: dep2019.geojson
edigeo/: Cargo.toml  README.md
edigeo/benches/: parsing.rs
edigeo/src/: archive.rs  error.rs  lib.rs  types.rs
edigeo/src/parser/: geo.rs  mod.rs  qal.rs  thf.rs  vec.rs
edigeo/src/repair/: fallback.rs  mod.rs  ring.rs  topology.rs
edigeo/tests/: integration.rs
